--- a/src/main/java/Core/GUI/OutCome.form
+++ b/src/main/java/Core/GUI/OutCome.form
@@ -16,10 +16,10 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="textArea1" alignment="0" max="32767" attributes="0"/>
+          <Component id="EventText" alignment="0" max="32767" attributes="0"/>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton1" min="-2" pref="93" max="-2" attributes="0"/>
+              <Component id="ContinueButton" min="-2" pref="93" max="-2" attributes="0"/>
               <EmptySpace pref="301" max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -27,20 +27,20 @@
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="textArea1" min="-2" pref="223" max="-2" attributes="0"/>
+              <Component id="EventText" min="-2" pref="223" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jButton1" pref="61" max="32767" attributes="0"/>
+              <Component id="ContinueButton" pref="61" max="32767" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="java.awt.TextArea" name="textArea1">
+    <Component class="java.awt.TextArea" name="EventText">
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="ContinueButton">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jButton1"/>
+        <Property name="text" type="java.lang.String" value="Continue"/>
       </Properties>
     </Component>
   </SubComponents>
