--- a/src/main/java/Core/GUI/OutCome.form
+++ b/src/main/java/Core/GUI/OutCome.form
@@ -42,6 +42,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Continue"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ContinueButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
